tests/ui/const-generics/incorrect-number-of-const-args.stderr
error[E0107]: function takes 2 generic arguments but 1 generic argument was supplied
  --> $DIR/incorrect-number-of-const-args.rs:6:5
   |
LL |     foo::<0>();
   |     ^^^   - supplied 1 generic argument
   |     |
   |     expected 2 generic arguments
   |
note: function defined here, with 2 generic parameters: `X`, `Y`
  --> $DIR/incorrect-number-of-const-args.rs:1:4
   |
LL | fn foo<const X: usize, const Y: usize>() -> usize {
   |    ^^^ --------------  --------------
help: add missing generic argument
   |
LL |     foo::<0, Y>();
   |            +++

error[E0107]: function takes 2 generic arguments but 3 generic arguments were supplied
  --> $DIR/incorrect-number-of-const-args.rs:9:5
   |
LL |     foo::<0, 0, 0>();
   |     ^^^         - help: remove this generic argument
   |     |
   |     expected 2 generic arguments
   |
note: function defined here, with 2 generic parameters: `X`, `Y`
  --> $DIR/incorrect-number-of-const-args.rs:1:4
   |
LL | fn foo<const X: usize, const Y: usize>() -> usize {
   |    ^^^ --------------  --------------

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0107`.
